<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="wrap_content">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/users_single_profile_image"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/defaultprof" />
    <TextView
        android:id="@+id/users_singe_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_single_display_name"
        android:textSize="20sp"
        android:textAlignment="center"
        android:layout_toRightOf="@+id/users_single_profile_image"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="15dp"
        android:layout_toEndOf="@+id/users_single_profile_image" />
    <TextView
        android:id="@+id/users_single_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_single_status"
        android:layout_toRightOf="@+id/users_single_profile_image"
        android:layout_below="@+id/users_singe_name"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="15dp"
        android:layout_toEndOf="@+id/users_single_profile_image" />

    <ImageView
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:id="@+id/users_single_online_icon"
        android:layout_above="@+id/users_single_status"
        android:layout_toRightOf="@+id/users_singe_name"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:layout_centerVertical="true"
        android:visibility="invisible"

        android:contentDescription="@string/online_offline"
        app:srcCompat="@drawable/online_icon"
        android:layout_toEndOf="@+id/users_singe_name" />

</RelativeLayout>